[package]
name = "contract_event_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web3_rust_wrapper = "0.2.8"
tokio = { version= "1", features = ["full"] }
web3 = "0.18.0"
indicatif = "0.16.2"
serde = "1.0.137"
serde_json = "1.0.81"
itertools = "0.10.3"